# goit-pythonweb-hw-01

./: README.md  pyproject.toml
task_1/: main.py
task_2/: main.py
